Fix title flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
   html {
     overflow-x: hidden;
     @media (min-width: 640px) {
-      scrollbar-gutter: stable both-edges;
+      scrollbar-gutter: stable;
     }
   }
 }
